--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,5 @@ spring.datasource.username=root
 spring.datasource.password=test
 
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-Spring.security.user.name=nidhi
-Spring.security.user.password=password
-Spring.security.user.roles=ADMIN
